--- a/views/parciales/bodyM.hbs
+++ b/views/parciales/bodyM.hbs
@@ -7,7 +7,7 @@
       
     </div>
     <div class="col">
-       <h2>Temp, {{ clima3 }}</h2>
+       <h2>Temp, {{ m }}</h2>
     </div>
   </div>
   <div class="row">
@@ -18,7 +18,7 @@
       
     </div>
     <div class="col">
-       <h2>Temp, {{ clima4 }}</h2>
+       <h2>Temp, {{ p }}</h2>
     </div>
   </div>
   
